# rizz

./: .clang-format  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  LICENSE  README.md  TODO.md  VERSION  plugin.sh  profiler.bat  rizz.sublime-project  stamp-version.sh
cmake/: bundle.cmake  glslcc.cmake  ispc.cmake  rpi.cmake
docs/css/: styles.css
docs/guide/: index.md.html
docs/guide/basics/: index.md.html
docs/js/: markdeep.min.js
examples/: CMakeLists.txt  README.md  common.h
examples/01-hello/: hello.c
examples/02-quad/: quad.c  quad.vert
examples/03-drawsprite/: drawsprite.c  drawsprite.frag  drawsprite.vert
examples/04-animsprite/: animsprite.c
examples/05-playsound/: playsound.c
examples/06-sdf/: sdf.c  sdf.frag  sdf.vert
examples/07-cs/: cs.c  cs.comp  cs.frag  cs.hlslcs
examples/07-nbody/: nbody.c  nbody.comp  nbody.frag  nbody.vert
examples/08-draw3d/: cube_multipart.blend  draw3d.c  draw3d.frag  draw3d.vert  monkey_nodes.blend  torus.blend
examples/09-pathfind/: agent.blend  cube.blend  pathfind.c
examples/10-collideboxes/: collideboxes.c
examples/11-pathspline/: pathspline.c
examples/11-spline/: spline.c
examples/12-boids/: boids.c
examples/assets/models/: agent.glb  box.glb  box_2parts.glb  cube.glb  cube_multipart.glb  monkey_nodes.glb  test.gltf  torus.glb
examples/assets/shaders/gles/: quad.sgs
examples/assets/shaders/gles2/: drawsprite.sgs  drawsprite_wire.sgs  quad.sgs
examples/assets/shaders/gles3/: drawsprite.sgs  drawsprite_wire.sgs  sdf.sgs
examples/assets/shaders/glsl/: drawsprite.sgs  drawsprite_wire.sgs  quad.sgs  sdf.sgs
examples/assets/shaders/hlsl/: cs.comp.sgs  cs.sgs  drawsprite.sgs  drawsprite_wire.sgs  quad.sgs  sdf.sgs
examples/assets/shaders/msl/: drawsprite.sgs  drawsprite_wire.sgs  quad.sgs  sdf.sgs
examples/assets/textures/: boy.json  handicraft.json  logo.basis
include/cj5/: LICENSE  README.md  cj5.h
include/dds-ktx/: dds-ktx.h
include/dmon/: LICENSE  README.md  dmon.h
include/imgui/: imgui-extra.h  imgui.h
include/rizz/: 2dtools.h  3dtools.h  _sg-types.h  android.h  app.h  asset.h  astar.h  camera.h  collision.h  config.h  core.h  entry.h  graphics.h  http.h  imgui-extra.h  imgui.h  input.h  ios.h  json.h  noise.h  plugin.h  reflect.h  rizz.h  sg-types.h  sound.h  spline.h  sprite.h  types.h  util.h  utility.h  vfs.h
include/sjson/: sjson.h
include/sprite/: sprite.h
include/stackwalkerc/: LICENSE  README.md  stackwalkerc.h
include/sx/: array.h  atomic.h  config.h  hash.h  io.h  jobs.h  linear-buffer.h  lockless.h  macros.h  math-types.h  math-vec.h  math.h  os.h  sx.h  threads.h
misc/: rizz.natvis  sx.natvis
misc/backup/: bmfont.c
scripts/build-tools/: android.py  auto-builder.py  ios.py  rpi-cross-copy-deps.bat  rpi-readme.txt
scripts/generators/: generate-imgui.py
scripts/win-tools/: vscode.bat
src/2dtools/: 2dtools-internal.h  2dtools.c  CMakeLists.txt  README.md  dummy-font.h  font.c  font.frag  font.vert  sprite.c
src/3dtools/: 3dtools-internal.h  3dtools.c  CMakeLists.txt  README.md  debug3d.c  debug3d.frag  debug3d.vert  debug3d_wire.frag  model.c  prims3d.c  prims3d.frag  prims3d.vert  wireframe.vert
src/astar/: CMakeLists.txt  README.md  astar.c
src/basisut/: CMakeLists.txt  README.md  basisut.cpp
src/collision/: CMakeLists.txt  README.md  collision.c
src/imgui/: CMakeLists.txt  README.md  font-roboto.h  imgui-internal.h  imgui.c  imgui.frag  imgui.vert  imguizmo-wrapper.c  log-window.c
src/input/: CMakeLists.txt  README.md  input.cpp
src/rizz/: CMakeLists.txt  android.c  app.c  asset.c  basisut.cpp  basisut.h  camera.c  config.h  core.c  demangle.cpp  graphics.c  http.c  internal.h  ios.m  json.c  memory.c  plugin.cpp  profiler.c  reflect.c  vfs.c  windows.cpp
src/rizz/shaders/: debug.frag  debug.vert  test-model.frag  test-model.vert  test.frag  test.vert
src/sound/: CMakeLists.txt  README.md  beep.h  sound.c
src/sprite/: CMakeLists.txt  README.md  sprite.c  sprite.frag  sprite.vert
src/sx/: CMakeLists.txt
src/sx/src/: allocator.c  hash.c  io.c  jobs.c  lin-alloc.c  lockless.c  math.c  os.c  rng.c  stack-alloc.c  string.c  threads.c  vmem.c
src/utility/: CMakeLists.txt  README.md  gradient.c  graph.c  noise.c  spline.c  utility.c
tools/darwin/: atlasc  basisu  glslcc
tools/linux/: atlasc  basisu
